--- a/.gitattributes
+++ b/.gitattributes
@@ -580,6 +580,8 @@ Vendor/xmlrpc/XMLRPCResponse.m -text
 WordPress.xcodeproj/project.pbxproj -text
 WordPressApi/AFXMLRPCClient.h -text
 WordPressApi/AFXMLRPCClient.m -text
+WordPressApi/WordPressApi.h -text
+WordPressApi/WordPressApi.m -text
 /WordPress_Prefix.pch -text
 /XMLValueDecoder.h -text
 /XMLValueDecoder.m -text
