Reverted new Blog View layout for 2.10

--- a/.gitattributes
+++ b/.gitattributes
@@ -27,6 +27,7 @@
 /BetaFeedbackViewController.xib -text
 /BlogSettingsView-iPad.xib -text
 /BlogSplitViewDetailViewController.xib -text
+/BlogViewController-iPad.xib -text
 /BlogViewController.xib -text
 /CTidy.h -text
 /CTidy.m -text
