--- a/.gitattributes
+++ b/.gitattributes
@@ -676,6 +676,7 @@ de.lproj/Localizable.strings -text svneol=unset#unset
 /downArrow@2x.png -text svneol=unset#unset
 en.lproj/Localizable.strings -text svneol=unset#unset
 es.lproj/Localizable.strings -text svneol=unset#unset
+/fix-translation.php -text
 fr.lproj/Localizable.strings -text svneol=unset#unset
 /getLocation.png -text
 /getLocation@2x.png -text
