--- a/.gitattributes
+++ b/.gitattributes
@@ -140,6 +140,8 @@ Classes/PageViewController.h -text
 Classes/PageViewController.m -text
 Classes/PagesViewController.h -text
 Classes/PagesViewController.m -text
+Classes/PanelNavigationController.h -text
+Classes/PanelNavigationController.m -text
 Classes/Post.h -text
 Classes/Post.m -text
 Classes/PostAnnotation.h -text
@@ -169,6 +171,8 @@ Classes/QuickPhotoViewController.h -text
 Classes/QuickPhotoViewController.m -text
 Classes/QuickPicturePreviewView.h -text
 Classes/QuickPicturePreviewView.m -text
+Classes/SidebarViewController.h -text
+Classes/SidebarViewController.m -text
 Classes/StatsChartViewController.h -text
 Classes/StatsChartViewController.m -text
 Classes/StatsPageControlViewController.h -text
