Changed SidebarViewController to a UIViewController instead of UITableViewController in order to add a fixed footer view. Added basic footer view button for now, we can change it to whatever we want though. refs #1074

--- a/.gitattributes
+++ b/.gitattributes
@@ -313,6 +313,7 @@ Resources-iPad/MainWindow-iPad.xib -text
 /RoundedRectBlack.png -text
 Settings.bundle/Root.plist -text
 Settings.bundle/en.lproj/Root.strings -text
+/SidebarViewController.xib -text
 /StatsCategoryViewController.xib -text
 /StatsChartViewController-iPad.xib -text
 /StatsChartViewController.xib -text
