Adds a stats webview for #1079. Not 100% finished but enough to share.
A few things: 
There are some issues with navigating with panels that need to be resolved.
This stats pages are loaded via the webview, not via afnetworking. Trying to use afnetworking then load the page was causing issues around baseurls.
The stats page has accompanying style changes that remove parts of its chrome when displayed inside the app.

--- a/.gitattributes
+++ b/.gitattributes
@@ -187,6 +187,8 @@ Classes/StatsTableCell.h -text
 Classes/StatsTableCell.m -text
 Classes/StatsTableViewController.h -text
 Classes/StatsTableViewController.m -text
+Classes/StatsWebViewController.h -text
+Classes/StatsWebViewController.m -text
 Classes/UIDevice-Hardware.h -text
 Classes/UIDevice-Hardware.m -text
 Classes/UIImageView+Gravatar.h -text
