Added a new class that defines attributes and behavior of the cells that appear in the Sidebar table

--- a/.gitattributes
+++ b/.gitattributes
@@ -177,6 +177,8 @@ Classes/SettingsViewController.h -text
 Classes/SettingsViewController.m -text
 Classes/SidebarSectionHeaderView.h -text
 Classes/SidebarSectionHeaderView.m -text
+Classes/SidebarTableViewCell.h -text
+Classes/SidebarTableViewCell.m -text
 Classes/SidebarViewController.h -text
 Classes/SidebarViewController.m -text
 Classes/StatsChartViewController.h -text
