--- a/.gitattributes
+++ b/.gitattributes
@@ -192,6 +192,8 @@ Classes/StatsTableViewController.h -text
 Classes/StatsTableViewController.m -text
 Classes/StatsWebViewController.h -text
 Classes/StatsWebViewController.m -text
+Classes/UIColor+Helpers.h -text
+Classes/UIColor+Helpers.m -text
 Classes/UIDevice-Hardware.h -text
 Classes/UIDevice-Hardware.m -text
 Classes/UIImageView+Gravatar.h -text
