Working Comments controller based on WPTableViewController. refs #1075
No swipe to moderate yet

--- a/.gitattributes
+++ b/.gitattributes
@@ -246,6 +246,7 @@ Classes/WPSelectionTableViewController.h -text
 Classes/WPSelectionTableViewController.m -text
 Classes/WPTableViewController.h -text
 Classes/WPTableViewController.m -text
+Classes/WPTableViewControllerSubclass.h -text
 Classes/WPWebAppViewController.h -text
 Classes/WPWebAppViewController.m -text
 Classes/WPWebView.h -text
