--- a/.gitattributes
+++ b/.gitattributes
@@ -808,6 +808,7 @@ nl.lproj/Localizable.strings -text svneol=unset#unset
 /photos.png -text
 /photos@2x.png -text
 pl.lproj/Localizable.strings -text svneol=unset#unset
+/postPreview.html -text
 /posts.png -text
 /posts@2x.png -text
 /preview.png -text
