Updated crash reporter to 1.1beta1

--- a/.gitattributes
+++ b/.gitattributes
@@ -84,24 +84,6 @@ Classes/Coordinate.h -text
 Classes/Coordinate.m -text
 Classes/CrashReportViewController.h -text
 Classes/CrashReportViewController.m -text
-Classes/CrashReporter.framework/CrashReporter -text
-Classes/CrashReporter.framework/Headers -text
-Classes/CrashReporter.framework/Resources -text
-Classes/CrashReporter.framework/Versions/A/CrashReporter -text
-Classes/CrashReporter.framework/Versions/A/Headers/CrashReporter.h -text
-Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReport.h -text
-Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportApplicationInfo.h -text
-Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportBinaryImageInfo.h -text
-Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportExceptionInfo.h -text
-Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportFormatter.h -text
-Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportProcessInfo.h -text
-Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportSignalInfo.h -text
-Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportSystemInfo.h -text
-Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportTextFormatter.h -text
-Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportThreadInfo.h -text
-Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReporter.h -text
-Classes/CrashReporter.framework/Versions/A/Resources/Info.plist -text
-Classes/CrashReporter.framework/Versions/Current -text
 Classes/DateUtils.h -text
 Classes/DateUtils.m -text
 Classes/EGOTableViewPullRefresh/EGORefreshTableHeaderView.h -text
@@ -287,6 +269,26 @@ Classes/stats.png -text
 Classes/stats@2x.png -text
 /CommentViewController.xib -text
 /CrashReportView.xib -text
+CrashReporter.framework/CrashReporter -text
+CrashReporter.framework/Headers -text
+CrashReporter.framework/Resources -text
+CrashReporter.framework/Versions/A/CrashReporter -text svneol=unset#unset
+CrashReporter.framework/Versions/A/Headers/CrashReporter.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReport.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReportApplicationInfo.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReportBinaryImageInfo.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReportExceptionInfo.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReportFormatter.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReportMachineInfo.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReportProcessInfo.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReportProcessorInfo.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReportSignalInfo.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReportSystemInfo.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReportTextFormatter.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReportThreadInfo.h -text
+CrashReporter.framework/Versions/A/Headers/PLCrashReporter.h -text
+CrashReporter.framework/Versions/A/Resources/Info.plist -text
+CrashReporter.framework/Versions/Current -text
 Creation/CXMLDocument_CreationExtensions.h -text
 Creation/CXMLDocument_CreationExtensions.m -text
 Creation/CXMLNode_CreationExtensions.h -text
