Sidebar updates: Fixed the blog title from being transparent. Also prevented the blog title from 'floating' above the table rows as that doesn't make much sense for the sidebar.  Added some table cell background graphics from involver's design on the P2. They will need to be updated with real cut-downs from the PSD but this get us started.

--- a/.gitattributes
+++ b/.gitattributes
@@ -834,6 +834,10 @@ pt.lproj/Localizable.strings -text svneol=unset#unset
 /right@2x.png -text svneol=unset#unset
 /settings.png -text
 /settings@2x.png -text
+/sidebar_bg.png -text
+/sidebar_bg@2x.png -text
+/sidebar_bg_selected.png -text
+/sidebar_bg_selected@2x.png -text
 /stats.png -text
 /stats@2x.png -text
 sv.lproj/Localizable.strings -text svneol=unset#unset
