Added drop down arrow placeholder to sidebar, and fixed up the blog headers to match the design. Also fixed drop down arrow placement on the iPhone, they were too far to the right to be seen.

--- a/.gitattributes
+++ b/.gitattributes
@@ -842,6 +842,10 @@ pt.lproj/Localizable.strings -text svneol=unset#unset
 /sidebar_comments@2x.png -text
 /sidebar_dashboard.png -text
 /sidebar_dashboard@2x.png -text
+/sidebar_expand_down.png -text
+/sidebar_expand_down@2x.png -text
+/sidebar_expand_up.png -text
+/sidebar_expand_up@2x.png -text
 /sidebar_pages.png -text
 /sidebar_pages@2x.png -text
 /sidebar_posts.png -text
