Quick Photo support for 3.1 iphone via the Sidebar. Includes incomplete support for the iPad that can be enabled by showing the quickphoto button on the ipad. Placeholder buttons are used for the Photo and Settings buttons on the sidebar until we have the actual graphics.

--- a/.gitattributes
+++ b/.gitattributes
@@ -169,6 +169,8 @@ Classes/PostsViewController.h -text
 Classes/PostsViewController.m -text
 Classes/QuickPhotoButton.h -text
 Classes/QuickPhotoButton.m -text
+Classes/QuickPhotoButtonView.h -text
+Classes/QuickPhotoButtonView.m -text
 Classes/QuickPhotoUploadProgressController.h -text
 Classes/QuickPhotoUploadProgressController.m -text
 Classes/QuickPhotoUploadProgressController.xib -text
