--- a/.gitattributes
+++ b/.gitattributes
@@ -834,8 +834,10 @@ pt.lproj/Localizable.strings -text svneol=unset#unset
 /settings@2x.png -text
 /sidebar_bg.png -text
 /sidebar_bg@2x.png -text
-/sidebar_bg_selected.png -text
-/sidebar_bg_selected@2x.png -text
+/sidebar_cell_bg.png -text
+/sidebar_cell_bg@2x.png -text
+/sidebar_cell_bg_selected.png -text
+/sidebar_cell_bg_selected@2x.png -text
 /sidebar_comments.png -text
 /sidebar_comments@2x.png -text
 /sidebar_dashboard.png -text
