Don't repeat yourself! Created a category for UIViewController that sets the color for the title instead of setting it in each controller. We can remove this category when moving over to iOS 5 as the minimum.

--- a/.gitattributes
+++ b/.gitattributes
@@ -189,6 +189,8 @@ Classes/UITableViewTextFieldCell.h -text
 Classes/UITableViewTextFieldCell.m -text
 Classes/UIToolbar+Styled.h -text
 Classes/UIToolbar+Styled.m -text
+Classes/UIViewController+Util.h -text
+Classes/UIViewController+Util.m -text
 Classes/UIViewController_iPadExtensions.h -text
 Classes/UIViewController_iPadExtensions.m -text
 Classes/WPAddCategoryViewController.h -text
