--- a/.gitattributes
+++ b/.gitattributes
@@ -773,6 +773,8 @@ ja.lproj/Localizable.strings -text svneol=unset#unset
 /navbar_button_bg_active@2x.png -text
 /navbar_menu.png -text
 /navbar_menu@2x.png -text
+/navbar_menu_white.png -text
+/navbar_menu_white@2x.png -text
 /navbar_new.png -text
 /navbar_new@2x.png -text
 /navbar_read.png -text
