Styles the toolbar color when used with the reader. Styles the refresh and options buttons when appearing in the navbar on iOS 5 Uses a gray spinner the iPhone on iOS 5 but a white on on iOS 4. Place holder images are used for the options button on iOS 5 til we get the update graphics.

--- a/.gitattributes
+++ b/.gitattributes
@@ -855,6 +855,10 @@ pt.lproj/Localizable.strings -text svneol=unset#unset
 sv.lproj/Localizable.strings -text svneol=unset#unset
 /sync.png -text svneol=unset#unset
 /sync@2x.png -text
+/sync_dark.png -text
+/sync_dark@2x.png -text
+/sync_lite.png -text
+/sync_lite@2x.png -text
 /tabPointer.png -text svneol=unset#unset
 /tabPointer@2x.png -text svneol=unset#unset
 /table_sep.png -text svneol=unset#unset
