Adds borders back to buttons on the navbar on ios 5 iphone. Adds a title to the topics page for iOS 5 iphone.

--- a/.gitattributes
+++ b/.gitattributes
@@ -777,6 +777,8 @@ ja.lproj/Localizable.strings -text svneol=unset#unset
 /navbar_new@2x.png -text
 /navbar_read.png -text
 /navbar_read@2x.png -text
+/navbar_read_dim.png -text
+/navbar_read_dim@2x.png -text
 nb.lproj/Localizable.strings -text svneol=unset#unset
 /next.png -text svneol=unset#unset
 /next@2x.png -text svneol=unset#unset
